packages/dartcv/src/dnn/dnn.h

void cv_dnn_AsyncArray_close(AsyncArrayPtr a);
CvStatus* cv_dnn_Net_readNetFromTensorflow(
    const char* model, const char* config, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromTensorflowBytes(
    VecUChar model, VecUChar config, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromTFLiteBytes(
    VecUChar bufferModel, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromTorch(
    const char* model, bool isBinary, bool evaluate, CVD_OUT Net* rval, CvCallback_0 callback
);
void cv_dnn_Net_close(NetPtr net);
CvStatus* cv_dnn_Net_setInput(
    Net net, Mat blob, const char* name, double scalefactor, Scalar mean, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_setPreferableBackend(Net net, int backend);
CvStatus* cv_dnn_Net_setPreferableTarget(Net net, int target);
void cv_dnn_Layer_close(LayerPtr layer);