packages/dartcv/lib/src/g/dnn.g.dart


  late final _cv_dnn_Net_readNetFromTFLiteBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecUChar, ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromTFLiteBytes');
  late final _cv_dnn_Net_readNetFromTFLiteBytes =
      _cv_dnn_Net_readNetFromTFLiteBytesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecUChar, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromTensorflow(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<ffi.Char> config,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromTensorflow(
      model,
      config,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromTensorflowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromTensorflow');
  late final _cv_dnn_Net_readNetFromTensorflow =
      _cv_dnn_Net_readNetFromTensorflowPtr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromTensorflowBytes(
    VecUChar model,
    VecUChar config,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromTensorflowBytes(
      model,
      config,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromTensorflowBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecUChar, VecUChar, ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromTensorflowBytes');
  late final _cv_dnn_Net_readNetFromTensorflowBytes =
      _cv_dnn_Net_readNetFromTensorflowBytesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecUChar, VecUChar, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromTorch(
    ffi.Pointer<ffi.Char> model,
    bool isBinary,
    bool evaluate,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromTorch(
      model,
      isBinary,
      evaluate,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromTorchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Bool,
              ffi.Bool,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromTorch');
  late final _cv_dnn_Net_readNetFromTorch =
      _cv_dnn_Net_readNetFromTorchPtr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, bool, bool,
              ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_setInput(
    Net net,
    Mat blob,
    ffi.Pointer<ffi.Char> name,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_setInput(
      net,
      blob,
      name,
      callback,
    );
  }

  late final _cv_dnn_Net_setInputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, Mat, ffi.Pointer<ffi.Char>,
              imp1.CvCallback_0)>>('cv_dnn_Net_setInput');
  late final _cv_dnn_Net_setInput = _cv_dnn_Net_setInputPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Net, Mat, ffi.Pointer<ffi.Char>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_setPreferableBackend(
    Net net,
    int backend,
  ) {
    return _cv_dnn_Net_setPreferableBackend(
      net,
      backend,
    );
  }

  late final _cv_dnn_Net_setPreferableBackendPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Net, ffi.Int)>>(
          'cv_dnn_Net_setPreferableBackend');
  late final _cv_dnn_Net_setPreferableBackend =
      _cv_dnn_Net_setPreferableBackendPtr
          .asFunction<ffi.Pointer<CvStatus> Function(Net, int)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_setPreferableTarget(
    Net net,
    int target,
  ) {
    return _cv_dnn_Net_setPreferableTarget(
      net,
      target,
    );
  }

  late final _cv_dnn_Net_setPreferableTargetPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Net, ffi.Int)>>(
          'cv_dnn_Net_setPreferableTarget');
  late final _cv_dnn_Net_setPreferableTarget =
      _cv_dnn_Net_setPreferableTargetPtr
          .asFunction<ffi.Pointer<CvStatus> Function(Net, int)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CvNativeDnn _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(AsyncArrayPtr)>>
      get cv_dnn_AsyncArray_close => _library._cv_dnn_AsyncArray_closePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(LayerPtr)>>
      get cv_dnn_Layer_close => _library._cv_dnn_Layer_closePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(NetPtr)>>
      get cv_dnn_Net_close => _library._cv_dnn_Net_closePtr;
}

final class AsyncArray extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef AsyncArrayPtr = ffi.Pointer<AsyncArray>;
typedef CvSize = imp1.CvSize;
typedef CvStatus = imp1.CvStatus;

final class Layer extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef LayerPtr = ffi.Pointer<Layer>;
typedef Mat = imp1.Mat;

final class Net extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef NetPtr = ffi.Pointer<Net>;
typedef Scalar = imp1.Scalar;
typedef VecF32 = imp1.VecF32;
typedef VecF64 = imp1.VecF64;
typedef VecI32 = imp1.VecI32;
typedef VecMat = imp1.VecMat;
typedef VecRect = imp1.VecRect;
typedef VecUChar = imp1.VecUChar;
typedef VecVecChar = imp1.VecVecChar;
